updated index for master

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Substantial Services Private Repo</h1>
+	<h1><img src="CydiaIcon.png"> Substantial Services Beta Repo V1 (Private)</h1>
 </div>
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>Substantial Services</span></b> is a private Cydia beta repository.</p>
+		<p><span class="text-primary"><b>Substantial [Services]</span></b> is a private Cydia beta repository.</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=http://substantialservices.github.io/">Add to Cydia</a>
 	</div>
 </div>
@@ -26,11 +26,11 @@
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">Testing</div>
+	  <div class="panel-heading">Package Name (Filza) (currently testing)</div>
 	  <div class="panel-body">
 		In progress.
-		Adding Filza so far here, but only in another testing branch.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info (not working)</a>
+		Soon to be Filza (maybe something else).<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
 	  </div>
 	</div>
 </div>
